Rely entirely on Matrix client, use Power Levels for filtering
