# server/errors.go
@@ -6,28 +6,28 @@ import (
 	"log"
 	"net/http"
 	"runtime"
-	"strings"
 
 	"github.com/gin-gonic/gin"
+	"github.com/matrix-org/gomatrix"
 )
 
 // List of ErrorReponse
 var (
-	ErrUnknown              = ErrorResponse{http.StatusInternalServerError, "UNKNOWN", "Internal server error"}
 	ErrBadJSON              = ErrorResponse{http.StatusBadRequest, "BAD_JSON", "Please provide a valid JSON"}
-	ErrBadTimestamp         = ErrorResponse{http.StatusBadRequest, "BAD_TIMESTAMP", "Invalid RFC3339 timestamp."}
+	ErrBadTimestamp         = ErrorResponse{http.StatusBadRequest, "BAD_TIMESTAMP", "Invalid RFC3339 timestamp"}
 	ErrBadEmail             = ErrorResponse{http.StatusBadRequest, "BAD_EMAIL", "Please provide a valid email"}
-	ErrMissingReference     = ErrorResponse{http.StatusBadRequest, "BAD_REFERENCE", "Please specify a reference ID."}
-	ErrReferenceNotFound    = ErrorResponse{http.StatusNotFound, "UNKNOWN_REFERENCE", "Reference not found."}
-	ErrNotificationNotFound = ErrorResponse{http.StatusNotFound, "UNKNOWN_NOTIFICATION", "Notification not found."}
-	ErrMissingToken         = ErrorResponse{http.StatusUnauthorized, "M_MISSING_TOKEN", "Missing access token."}
-	ErrUnknownToken         = ErrorResponse{http.StatusUnauthorized, "UNKNOWN_TOKEN", "Unknown Access Token."}
+	ErrMissingReference     = ErrorResponse{http.StatusBadRequest, "BAD_REFERENCE", "Please specify a reference ID"}
+	ErrReferenceNotFound    = ErrorResponse{http.StatusNotFound, "UNKNOWN_REFERENCE", "Reference not found"}
+	ErrNotificationNotFound = ErrorResponse{http.StatusNotFound, "UNKNOWN_NOTIFICATION", "Notification not found"}
+	ErrMissingToken         = ErrorResponse{http.StatusUnauthorized, "M_MISSING_TOKEN", "Missing access token"}
+	ErrUnknownToken         = ErrorResponse{http.StatusUnauthorized, "UNKNOWN_TOKEN", "Unknown Access Token"}
 	ErrUnauthorized         = ErrorResponse{http.StatusUnauthorized, "M_UNAUTHORIZED", "Not allowed"}
-	ErrUnknownOrg           = ErrorResponse{http.StatusBadRequest, "UNKNOWN_ORG", "Unknown Organisation."}
+	ErrUnknownOrg           = ErrorResponse{http.StatusBadRequest, "UNKNOWN_ORG", "Unknown Org"}
+	ErrOrgExists            = ErrorResponse{http.StatusConflict, "ORG_EXISTS", "Org name already exists"}
 )
 
 var (
-	errAdmin = errors.New("Must be admin.")
+	errAdmin = errors.New("must be admin")
 )
 
 // ErrorResponse is Matrix Error response.
@@ -38,10 +38,12 @@ type ErrorResponse struct {
 }
 
 func (e ErrorResponse) with(err error) ErrorResponse {
-	if e == ErrUnknown {
-		_, file, line, _ := runtime.Caller(1)
-		idx := strings.Index(file, "/server/")
-		log.Printf("[Error] %s:%d - %s", file[idx:], line, err)
+	if e, ok := err.(gomatrix.RespError); ok {
+		return ErrorResponse{
+			Status: http.StatusBadRequest,
+			Code:   e.ErrCode,
+			Err:    e.Err,
+		}
 	}
 	e.Err = err.Error()
 	return e
@@ -49,4 +51,19 @@ func (e ErrorResponse) with(err error) ErrorResponse {
 
 func (e ErrorResponse) Error() string { return fmt.Sprintf("%s (%s)", e.Code, e.Err) }
 
-func (e ErrorResponse) abort(c *gin.Context) { c.AbortWithStatusJSON(e.Status, e) }
+func handler(fn func(c *gin.Context) error) func(c *gin.Context) {
+	return func(c *gin.Context) {
+		if err := fn(c); err != nil {
+			e, ok := err.(ErrorResponse)
+			if !ok {
+				for i := range []int{0, 1, 2, 3} {
+					_, file, line, _ := runtime.Caller(i)
+					idx := 0
+					log.Printf("[Error] %s:%d - %s", file[idx:], line, err)
+				}
+				e = ErrorResponse{http.StatusInternalServerError, "UNKNOWN", err.Error()}
+			}
+			c.AbortWithStatusJSON(e.Status, e)
+		}
+	}
+}
