# server/server_common.go
@@ -2,21 +2,20 @@ package server
 
 import (
 	"context"
-	"crypto/hmac"
-	"crypto/sha256"
-	"encoding/hex"
 	"log"
 	"math/rand"
 	"net/http"
 	"reflect"
 	"time"
 
+	"github.com/matrix-org/gomatrix"
+	"github.com/securityfirst/matrix-notifier/database"
+
 	"github.com/oklog/ulid"
 
 	"gopkg.in/gorp.v2"
 
 	"github.com/gin-gonic/gin"
-	"github.com/matrix-org/gomatrix"
 )
 
 var entropy = ulid.Monotonic(rand.New(rand.NewSource(time.Now().UnixNano())), 0)
@@ -32,6 +31,33 @@ const (
 	NVote         = "vote"         // Vote, sent by user, seen by admin, requires Pool
 )
 
+// List of User Levels
+const (
+	LUser  = 0
+	LMod   = 50
+	LAdmin = 100
+)
+
+var rulesView = map[string]int{
+	NPanic:        LUser,
+	NBroadcast:    LMod,
+	NAnnouncement: LUser,
+	NQuestion:     LUser,
+	NAnswer:       LUser,
+	NPoll:         LUser,
+	NVote:         LMod,
+}
+
+var rulesCreate = map[string]int{
+	NPanic:        LUser,
+	NBroadcast:    LMod,
+	NAnnouncement: LMod,
+	NQuestion:     LMod,
+	NAnswer:       LUser,
+	NPoll:         LMod,
+	NVote:         LMod,
+}
+
 // List of Levels
 const (
 	LvlUser = iota
@@ -40,38 +66,30 @@ const (
 )
 
 // NewServer returns a new Server.
-func NewServer(address string, db *gorp.DbMap, c *gomatrix.Client, m Mailer, secret []byte) *Server {
+func NewServer(address, matrix string, db *gorp.DbMap) *Server {
 	engine := gin.Default()
 	s := Server{
-		server:   &http.Server{Addr: address, Handler: engine},
-		db:       db,
-		matrix:   c,
-		mailer:   m,
-		verifier: verifier(secret),
+		server: &http.Server{Addr: address, Handler: engine},
+		db:     db,
+		matrix: matrix,
 	}
 
-	engine.GET("/_matrix/client/r0/organisation/:orgID/verify", s.RedirectToIntent())
-	engine.POST("/_matrix/client/r0/organisation/:orgID/verify", s.ParseRequest(createUserRequest{}), s.CreateUser())
-
 	auth := engine.Use(s.Authenticate())
-	auth.POST("/_matrix/client/r0/organisation/:orgID", s.ParseRequest(createOrganisationRequest{}), s.CreateOrganisation())
-	auth.GET("/_matrix/client/r0/notification", s.ViewNotifications())
-	auth.POST("/_matrix/client/r0/notification", s.ParseRequest(createNotificationRequest{}), s.CreateNotification())
-	auth.PATCH("/_matrix/client/r0/notification/:notID/read", s.ReadNotifications())
-
-	admin := auth.Use(s.IsAdmin())
-	admin.POST("/_matrix/client/r0/organisation/:orgID/invite", s.ParseRequest(inviteUserRequest{}), s.InviteUser())
+	auth.GET("/_matrix/client/r0/organisation/", s.ListOrgs())
+	auth.GET("/_matrix/client/r0/organisation/:name", s.GetOrgByName("name"))
+	auth.POST("/_matrix/client/r0/organisation/:orgID", s.ParseRequest(database.Org{}), s.CreateOrg())
+	auth.GET("/_matrix/client/r0/notification/", s.ViewNotifications())
+	auth.POST("/_matrix/client/r0/notification/", s.ParseRequest(database.Notification{}), s.CreateNotification())
+	auth.PATCH("/_matrix/client/r0/notification/", s.ReadNotifications())
 
 	return &s
 }
 
 // Server is a gin handler generator.
 type Server struct {
-	server   *http.Server
-	db       *gorp.DbMap
-	matrix   *gomatrix.Client
-	mailer   Mailer
-	verifier verifier
+	server *http.Server
+	db     *gorp.DbMap
+	matrix string
 }
 
 // Run starts the Server.
@@ -86,16 +104,54 @@ func (s *Server) ParseRequest(v interface{}) gin.HandlerFunc {
 	if base.Kind() != reflect.Struct {
 		panic("interface must be a struct")
 	}
-	return gin.HandlerFunc(func(c *gin.Context) {
+	return handler(func(c *gin.Context) error {
 		defer c.Request.Body.Close()
 		v := reflect.New(base).Interface()
-		log.Printf("Parsing request in %T", v)
 		if err := c.BindJSON(v); err != nil {
-			ErrBadJSON.abort(c)
-			return
+			return ErrBadJSON
 		}
-		c.Set("request", v)
+		c.Set(keyRequest, v)
+		return nil
 	})
+}
+
+const (
+	keyUser    = "user"
+	keyClient  = "client"
+	keyRequest = "request"
+)
+
+// Authenticate saves the user associated with the token provided in query.
+func (s *Server) Authenticate() gin.HandlerFunc {
+	return handler(func(c *gin.Context) error {
+		client, err := gomatrix.NewClient(s.matrix, "", c.Query("access_token"))
+		if err != nil {
+			return err
+		}
+		var resp struct {
+			UserID string `json:"user_id"`
+		}
+		url := client.BuildURL("/account/whoami")
+		if _, err := client.MakeRequest("GET", url, nil, &resp); err != nil {
+			return err
+		}
+
+		c.Set(keyUser, resp.UserID)
+		c.Set(keyClient, client)
+		return nil
+	})
+}
+
+func getUser(c *gin.Context) string             { return c.MustGet(keyUser).(string) }
+func getClient(c *gin.Context) *gomatrix.Client { return c.MustGet(keyClient).(*gomatrix.Client) }
+func getRequest(c *gin.Context) interface{}     { return c.MustGet(keyRequest) }
+
+func getRooms(c *gin.Context) ([]string, error) {
+	r, err := getClient(c).JoinedRooms()
+	if err != nil {
+		return nil, err
+	}
+	return r.JoinedRooms, nil
 }
 
 func closeTransaction(tx *gorp.Transaction, err *error) {
@@ -110,10 +166,26 @@ func closeTransaction(tx *gorp.Transaction, err *error) {
 	}
 }
 
-type verifier []byte
+type orgLevel struct {
+	*database.Org
+	Level int `json:"level"`
+}
 
-func (v verifier) Hash(orgID string, email string) string {
-	h := hmac.New(sha256.New, []byte(v))
-	h.Write([]byte(email))
-	return hex.EncodeToString(h.Sum([]byte(orgID)))
+func getOrgLevel(c *gin.Context, org *database.Org) (*orgLevel, error) {
+	var p struct {
+		Users        map[string]int `json:"users"`
+		UsersDefault int            `json:"users_default"`
+	}
+	if err := getClient(c).StateEvent(org.RoomID, "m.room.power_levels", "", &p); err != nil {
+		return nil, err
+	}
+	lvl, ok := p.Users[getUser(c)]
+	if !ok {
+		lvl = p.UsersDefault
+	}
+	return &orgLevel{org, lvl}, nil
+}
+
+func newULID() string {
+	return ulid.MustNew(ulid.Timestamp(time.Now()), entropy).String()
 }
