# server/server_organisation.go
@@ -1,90 +1,87 @@
 package server
 
 import (
-	"fmt"
 	"net/http"
+
+	"github.com/matrix-org/gomatrix"
 
 	"github.com/gin-gonic/gin"
 	"github.com/securityfirst/matrix-notifier/database"
 )
 
-// ListUserOrganisations returns Organisations for the user associated with provided token.
-func (s *Server) ListUserOrganisations() gin.HandlerFunc {
-	return gin.HandlerFunc(func(c *gin.Context) {
-		orgs, err := database.ListOrganisations(s.db, c.MustGet("user").(string))
+// ListOrgs returns Orgs for the current User.
+func (s *Server) ListOrgs() gin.HandlerFunc {
+	return handler(func(c *gin.Context) error {
+		rooms, err := getRooms(c)
 		if err != nil {
-			ErrUnknown.with(err).abort(c)
-			return
+			return err
 		}
-		c.JSON(http.StatusOK, orgs)
-	})
-}
-
-// GetOrganisation returns an Organisation.
-func (s *Server) GetOrganisation() gin.HandlerFunc {
-	return gin.HandlerFunc(func(c *gin.Context) {
-		org, err := s.db.Get(&database.Organisation{}, c.Param("orgID"))
+		orgs, err := database.ListOrgs(s.db, rooms...)
 		if err != nil {
-			ErrUnknown.with(err).abort(c)
-			return
+			return err
 		}
-		if org == nil {
-			c.JSON(http.StatusNotFound, ErrUnknownOrg)
-		}
-		c.JSON(http.StatusOK, org)
-	})
-}
-
-// createOrganisationRequest is the input of CreateOrganisation.
-type createOrganisationRequest struct {
-	Name    string `json:"name"`
-	Intent  string `json:"intent"`
-	Package string `json:"package"`
-	Admin   string `json:"admin"`
-}
-
-// CreateOrganisation returns an Organisation.
-func (s *Server) CreateOrganisation() gin.HandlerFunc {
-	return gin.HandlerFunc(func(c *gin.Context) {
-		req := c.MustGet("request").(*createOrganisationRequest)
-		org := database.Organisation{
-			ID:      c.Param("orgID"),
-			Name:    req.Name,
-			Package: req.Package,
-			Intent:  req.Intent,
-		}
-		tx, err := s.db.Begin()
-		if err != nil {
-			ErrUnknown.with(err).abort(c)
-			return
-		}
-		defer closeTransaction(tx, &err)
-		if err = database.Create(tx, &org); err != nil {
-			ErrUnknown.with(err).abort(c)
-			return
-		}
-		if req.Admin != "" {
-			if err := s.inviteUser(tx, org.ID, req.Admin, LvlOwner); err != nil {
-				err.(ErrorResponse).abort(c)
+		list := make([]*orgLevel, len(orgs))
+		for i := range orgs {
+			list[i], err = getOrgLevel(c, orgs[i])
+			if err != nil {
+				return err
 			}
 		}
-		c.Status(http.StatusCreated)
+		c.JSON(http.StatusOK, list)
+		return nil
 	})
 }
 
-// RedirectToIntent redirect to the Organisation intent.
-func (s *Server) RedirectToIntent() gin.HandlerFunc {
-	return gin.HandlerFunc(func(c *gin.Context) {
-		ou, err := database.FindOrganisationUserByHash(s.db, c.Query("hash"))
+// GetOrgByName returns an Org.
+func (s *Server) GetOrgByName(name string) gin.HandlerFunc {
+	return handler(func(c *gin.Context) error {
+		rooms, err := getRooms(c)
 		if err != nil {
-			ErrUnknown.with(err).abort(c)
-			return
+			return err
 		}
-		org, err := database.Get(s.db, &database.Organisation{}, ou.OrganisationID)
+		org, err := database.GetOrgByName(s.db, c.Param(name), rooms...)
 		if err != nil {
-			ErrUnknown.with(err).abort(c)
-			return
+			return err
 		}
-		c.Redirect(http.StatusTemporaryRedirect, fmt.Sprintf("%s://verify?hash=%s", org.(*database.Organisation).Intent, c.Query("hash")))
+		orgLvl, err := getOrgLevel(c, org)
+		if err != nil {
+			return err
+		}
+		c.JSON(http.StatusOK, orgLvl)
+		return nil
+	})
+}
+
+// CreateOrg returns an Org.
+func (s *Server) CreateOrg() gin.HandlerFunc {
+	return handler(func(c *gin.Context) error {
+		req, client := getRequest(c).(*database.Org), getClient(c)
+		room, err := client.CreateRoom(&gomatrix.ReqCreateRoom{
+			Visibility:    "private",
+			Name:          req.Name,
+			RoomAliasName: req.Name,
+		})
+		if err != nil {
+			return err
+		}
+		req.RoomID = room.RoomID
+		defer func(err *error) {
+			if *err != nil {
+				client.ForgetRoom(room.RoomID)
+			}
+		}(&err)
+		tx, err := s.db.Begin()
+		if err != nil {
+			return err
+		}
+		defer closeTransaction(tx, &err)
+		if err = database.Create(tx, req); err != nil {
+			if database.IsDuplicate(err) {
+				return ErrOrgExists
+			}
+			return err
+		}
+		c.Status(http.StatusCreated)
+		return nil
 	})
 }
